New version management with parent pom